fix: horizontal scroll

--- a/src/layouts/AppLayout/index.module.less
+++ b/src/layouts/AppLayout/index.module.less
@@ -10,6 +10,7 @@
 
 .content {
   width: calc(100% - 72px);
+  overflow: hidden;
 }
 
 .burgerTitle {
